const a=1,t=[{type:"Retry",mesh:"default",name:"retry-all-default",creationTime:"2021-07-29T10:18:49.955186+02:00",modificationTime:"2021-07-29T10:18:49.955186+02:00",sources:[{match:{"kuma.io/service":"*"}}],destinations:[{match:{"kuma.io/service":"*"}}],conf:{http:{numRetries:5,perTryTimeout:"16s",backOff:{baseInterval:"0.025s",maxInterval:"0.250s"}},tcp:{maxConnectAttempts:5},grpc:{numRetries:5,perTryTimeout:"16s",backOff:{baseInterval:"0.025s",maxInterval:"0.250s"}}}}],e=null,s={total:1,items:t,next:e};export{s as default,t as items,e as next,a as total};
